signup ui color changes

--- a/src/custom.scss
+++ b/src/custom.scss
@@ -1,11 +1,11 @@
-$primary: #303456;
+$primary: #3D5A80;
 $secondary: #8D8480;
 $success: #09cc7f;
-$info: #7EE0A5;
-$warning: #ffc107;
-$danger: #D17957;
+$info: #E0FBFC;
+$warning: #ffff88;
+$danger: #EE6C4D;
 $light: #F5F5F8;
-$dark: #000000;
+$dark: #293241;
 $btn-focus-box-shadow: none !important;
 
 @import url('https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;700&display=swap');
