--- a/src/custom.scss
+++ b/src/custom.scss
@@ -20,7 +20,6 @@ html {
   font-family: 'Mulish', sans-serif;
 }
 
-.no-list>li {
-  list-style: none;
-  font-size: 0.8rem;
+.strikeThrough {
+  text-decoration: line-through;
 }
